...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.text.input.KeyboardType
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import pdm.demos.crowdtally.ui.theme.CrowdTallyTheme

const val CONFIGURE_VIEW_TAG = "configure_view"
const val SAVE_BUTTON_TAG = "save_button"
const val CANCEL_BUTTON_TAG = "cancel_button"
const val CAPACITY_TEXT_FIELD_TAG = "capacity_text_field"

@Composable
fun ConfigurationView(
    state: CrowdTallyScreenState.Configuration,
...
