...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.tooling.preview.Preview
import androidx.compose.ui.unit.dp
import androidx.compose.ui.unit.sp

const val COUNTING_VIEW_TAG = "counting_view"
const val COUNTER_VIEW_TAG = "counter"
const val INCREMENT_BUTTON_TAG = "increment"
const val DECREMENT_BUTTON_TAG = "decrement"
const val CONFIGURE_BUTTON_TAG = "configure"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun CountingView(
    state: CrowdTallyScreenState.Counting,
    onIncrementIntent: () -> Unit,
...
